# ogy-oyunlar

./: README.md
breakout-ish/: CMakeLists.txt  README.md  analyze.sh
breakout-ish/include/: CoreComponents.hpp  Entity.hpp  Game.hpp  MenuScene.hpp  Scene.hpp
breakout-ish/include/Entities/: Ball.hpp  Brick.hpp  Paddle.hpp
breakout-ish/include/Managers/: AssetManager.hpp
breakout-ish/include/Scenes/: MenuScene.hpp  PaddleSelectScene.hpp  PlayScene.hpp
breakout-ish/src/: Game.cpp  MenuScene.cpp  main.cpp
breakout-ish/src/Entities/: Ball.cpp  Brick.cpp  Paddle.cpp
breakout-ish/src/Managers/: AssetManager.cpp  InputManager.cpp  SceneManager.cpp
breakout-ish/src/Scenes/: MenuScene.cpp  PaddleSelectScene.cpp  PlayScene.cpp
pong-ish/: .editorconfig  CMakeLists.txt  README.md
pong-ish/include/: game.hpp  paddle.hpp
pong-ish/src/: game.cpp  main.cpp  paddle.cpp
